# cross-platform-hello

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fizzbuzz.cpp  stdafx.cpp  stdafx.h  targetver.h
